Fix overflowing layout issue in IE.

--- a/styles/components/_global_layout.scss
+++ b/styles/components/_global_layout.scss
@@ -24,25 +24,10 @@
     max-width: $site-max-width;
     overflow-x: hidden;
     flex-grow: 1;
-
-    @include ie-only {
-      max-width: 85%;
-    }
+    -ms-flex-negative: 1;
 
     @include media($medium-screen) {
       margin: $gap * 2;
-    }
-
-    @include media($large-screen) {
-      @include ie-only {
-        max-width: 80%;
-      }
-    }
-
-    @include media($xlarge-screen) {
-      @include ie-only {
-        max-width: $site-max-width;
-      }
     }
   }
 }
